[gd_scene load_steps=12 format=2]

[ext_resource path="res://spoo_world/world/Admin/update_admin.gd" type="Script" id=1]
[ext_resource path="res://spoo_world/assets/img/Fondo.png" type="Texture" id=2]
[ext_resource path="res://spoo_world/assets/icon/arrow_1.png" type="Texture" id=3]
[ext_resource path="res://spoo_world/assets/typography/Lemonade Bold Demo.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://spoo_world/assets/icon/button_bg.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 27
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.8, 0.8, 0.8, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=6]
size = 80
outline_color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 4 )

[node name="admin_update" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 400 )
texture = ExtResource( 2 )

[node name="Panel" type="ColorRect" parent="."]
margin_left = 315.231
margin_top = 208.783
margin_right = 995.231
margin_bottom = 744.783
size_flags_stretch_ratio = 0.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="actualizar" type="Button" parent="Panel"]
anchor_left = 0.431829
anchor_top = -0.0622538
anchor_right = 0.552417
anchor_bottom = 0.0067761
margin_left = -51.8745
margin_top = 422.585
margin_right = 46.1255
margin_bottom = 472.585
custom_colors/font_color = Color( 0.027451, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
text = "ACTUALIZAR"
icon = ExtResource( 5 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="user" type="Label" parent="Panel"]
anchor_left = 0.000133806
anchor_top = -0.0248246
anchor_right = 0.0133691
anchor_bottom = 0.0124888
margin_left = 173.678
margin_top = 139.523
margin_right = 268.678
margin_bottom = 159.523
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "User"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="user_input" type="TextEdit" parent="Panel/user"]
margin_left = -2.42038
margin_top = 39.0437
margin_right = 319.58
margin_bottom = 79.0437
custom_constants/line_spacing = 8
custom_constants/completion_lines = -3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="password" type="Label" parent="Panel"]
anchor_left = 0.0011309
anchor_top = -0.0350429
anchor_right = 0.0467191
anchor_bottom = 0.00227049
margin_left = 173.0
margin_top = 254.0
margin_right = 268.0
margin_bottom = 274.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Password"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="password_input" type="TextEdit" parent="Panel/password"]
margin_left = -3.33337
margin_top = 47.054
margin_right = 322.667
margin_bottom = 87.054
custom_constants/line_spacing = 8
custom_constants/completion_lines = -3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.008
margin_left = 367.0
margin_top = 69.0
margin_right = 933.0
margin_bottom = 174.0
theme = SubResource( 5 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "ADMINISTRADOR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="atras" type="Button" parent="."]
margin_left = 38.9998
margin_top = 36.0
margin_right = 176.0
margin_bottom = 204.0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Panel/actualizar" to="." method="_on_actualizar_pressed"]
[connection signal="pressed" from="atras" to="." method="_on_atras_pressed"]
